--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,14 @@
-.app {
-}
-.app__container {
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.App {
+  &__container {
+    height: 100vh;
+    &__block {
+      height: inherit;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: -webkit-fill-available;
+      &--center {
+      }
+    }
+  }
 }
