--- a/src/components/WeatherDisplay/WeatherDisplay.scss
+++ b/src/components/WeatherDisplay/WeatherDisplay.scss
@@ -1,8 +1,42 @@
 .WeatherDisplay {
   width: 100%;
   &__container {
-    display: flex;
-    justify-content: space-between;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    &__list {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      width: 100%;
+      &__icon {
+        width: 64px;
+        height: 64px;
+      }
+    }
+    &__current {
+      display: flex;
+      justify-content: space-between;
+      &__left {
+        &__location {
+          font-size: large;
+          font-weight: bold;
+        }
+        &__temp {
+          font-size: large;
+          font-weight: bold;
+        }
+      }
+      &__right {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        &__temp {
+          font-size: large;
+          font-weight: bold;
+        }
+      }
+    }
   }
 }
