--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -1,41 +1,40 @@
 .body {
-    font-size: medium;
+  font-size: medium;
 }
-*
-{
-    outline: none;
-}
-
-html, body
-{
-    height: 100%;
-    min-height: 100%;
+* {
+  outline: none;
 }
 
-body
-{
-    margin: 0;
-    background-color: #ffd8d8;
+html,
+body {
+  height: 100%;
+  min-height: 100%;
 }
 
-.tb
-{
-    display: table;
-    width: 100%;
+body {
+  margin: 0;
+  // background-color: #ffd8d8;
 }
 
-.td
-{
-    display: table-cell;
-    vertical-align: middle;
+.tb {
+  display: table;
+  width: 100%;
 }
 
-input, button
-{
-    color: #fff;
-    font-family: Nunito;
-    padding: 0;
-    margin: 0;
-    border: 0;
-    background-color: transparent;
+.td {
+  display: table-cell;
+  vertical-align: middle;
 }
+
+input,
+button {
+  color: #fff;
+  font-family: Nunito;
+  padding: 0;
+  margin: 0;
+  border: 0;
+  background-color: transparent;
+}
+$searchInputWidth: 550px;
+$weatherDisplayWidth: 850px;
+$breakpoint-mobile: 768px;
