--- a/src/App.scss
+++ b/src/App.scss
@@ -1,13 +1,20 @@
 .App {
+  width: 100%;
+  height: 100vh;
   &__container {
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     &__block {
+      width: 100%;
       height: inherit;
       display: flex;
       justify-content: center;
       align-items: center;
       height: -webkit-fill-available;
       &--center {
+        width: 100%;
+        display: flex;
+        justify-content: center;
       }
     }
   }
