--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -35,6 +35,23 @@ button {
   border: 0;
   background-color: transparent;
 }
-$searchInputWidth: 550px;
+$searchInputWidth: 350px;
+$searchInputHeight: 90px;
 $weatherDisplayWidth: 850px;
 $breakpoint-mobile: 768px;
+$focus-color: rgb(255, 225, 169);
+$active-color: rgb(255, 225, 169);
+
+/* Ripple effect */
+@mixin ripple {
+    background-position: center;
+    transition: background 0.02s;
+    &:hover {
+        background: $focus-color radial-gradient(circle, transparent 1%, $focus-color 1%) center/1500%;
+    }
+    &:active {
+        background-color: $active-color;
+        background-size: 100%;
+        transition: background 0s;
+    }
+}
