--- a/src/components/WeatherDisplay/WeatherDisplay.scss
+++ b/src/components/WeatherDisplay/WeatherDisplay.scss
@@ -12,11 +12,12 @@
       width: 100%;
       line-height: 2;
       flex-wrap: wrap;
+      justify-content: space-between;
       &__item {
-        margin-bottom: 10px;
         background-color: white;
         min-width: 100px;
         padding: 20px;
+        margin: 10px;
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
@@ -29,9 +30,9 @@
         -o-transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
         transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
         border-radius: 16px;
-        -webkit-box-shadow: 15px 15px 27px #e1e1e3, -15px -15px 27px #ffffff;
-        box-shadow: 15px 15px 27px #e1e1e3, -15px -15px 27px #ffffff;
-        // margin-right: 15px;
+        -webkit-box-shadow: 5px 5px 10px #e1e1e3, -15px -15px 27px #ffffff;
+        box-shadow: 5px 5px 10px  #e1e1e3, -15px -15px 27px #ffffff;
+        @include ripple;
         &__icon {
           width: 64px;
           height: 64px;
