--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,5 @@
 .App {
-  width: 100%;
-  height: 100vh;
+  width: 100vw;
   &__container {
     width: 100%;
     height: 100%;
@@ -10,11 +9,9 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      height: -webkit-fill-available;
       &--center {
+        height: 100vh;
         width: 100%;
-        display: flex;
-        justify-content: center;
       }
     }
   }
