--- a/src/App.scss
+++ b/src/App.scss
@@ -10,8 +10,11 @@
       justify-content: center;
       align-items: center;
       &--center {
-        height: 100vh;
+        min-height: 100vh;
         width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
       }
     }
   }
