wrap up styling and adding interactive logic with dropdown menu

--- a/src/components/WeatherDisplay/WeatherDisplay.scss
+++ b/src/components/WeatherDisplay/WeatherDisplay.scss
@@ -42,7 +42,9 @@
         box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
         @include ripple;
         &__icon {
-          width: 64px;
+          width: 100%;
+          display: flex;
+          justify-content: center;
           height: 64px;
         }
         &__header {
