--- a/src/App.scss
+++ b/src/App.scss
@@ -16,6 +16,13 @@
         flex-direction: column;
         justify-content: center;
       }
+      &--start {
+        min-height: 100vh;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+      }
     }
   }
 }
