--- a/src/assets/loader.scss
+++ b/src/assets/loader.scss
@@ -8,7 +8,10 @@
   font-size: 11px;
   text-indent: -99999em;
   margin: 55px auto;
-  position: relative;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%); 
+  z-index: 20;
   width: 10em;
   height: 10em;
   box-shadow: inset 0 0 0 1em;
@@ -24,7 +27,7 @@
 .loader:before {
   width: 5.2em;
   height: 10.2em;
-  background: #0dc5c1;
+  background: black;
   border-radius: 10.2em 0 0 10.2em;
   top: -0.1em;
   left: -0.1em;
@@ -36,7 +39,7 @@
 .loader:after {
   width: 5.2em;
   height: 10.2em;
-  background: #0dc5c1;
+  background: black;
   border-radius: 0 10.2em 10.2em 0;
   top: -0.1em;
   left: 4.9em;
