--- a/src/components/SearchInput/SearchInput.scss
+++ b/src/components/SearchInput/SearchInput.scss
@@ -3,15 +3,18 @@
   display: flex;
   flex-direction: column;
   width: $searchInputWidth;
-  height: $searchInputHeight;
   width: 100%;
   position: relative;
   padding-top: 15vh;
   &__wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     &__title {
       font-family: Nunito;
       font-size: large;
       text-align: center;
+      width: 100%;
     }
     &__block {
       padding: 15px;
@@ -30,19 +33,22 @@
       //  search css
       &__search {
         &__container {
+          display: flex;
+          justify-content: center;
         }
   
         &__input {
-          width: 100%;
           padding: 12px 24px;
-  
           background-color: transparent;
           transition: transform 250ms ease-in-out;
-          font-size: large;
+          font-size: medium;
+          @media (min-width: $breakpointMobile) {
+            font-size: large;
+          }
           line-height: 18px;
-  
           color: #575756;
           background-color: transparent;
+          width: 80%;
           /*         background-image: url(http://mihaeltomic.com/codepen/input-search/ic_search_black_24px.svg); */
   
           background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cpath d='M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z'/%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3C/svg%3E");
@@ -83,10 +89,11 @@
     z-index: 10;
     display: flex;
     justify-content: center;
+    cursor: pointer;
     &__list {
       border: 1px rgb(165, 164, 164) solid;
       width: $searchInputWidth;
-      @media (min-width: $breakpoint-mobile) {
+      @media (min-width: $breakpointMobile) {
         width: 60%;
       }
       background-color: white;
@@ -99,8 +106,8 @@
       &::-webkit-scrollbar {
         display: none;
       }
-      li {
-        height: 30px;
+      div {
+        height: 35px;
         display: flex;
         align-items: center;
         &:hover {
