--- a/src/components/WeatherDisplay/WeatherDisplay.scss
+++ b/src/components/WeatherDisplay/WeatherDisplay.scss
@@ -51,19 +51,22 @@
           text-align: center;
           font-weight: bold;
         }
+        &--active {
+          background-color: $activeColor;
+        }
       }
     }
     &__current {
       display: flex;
       flex-direction: column-reverse;
-      @media (min-width: $breakpoint-mobile) {
+      @media (min-width: $breakpointMobile) {
         flex-direction: row;
         justify-content: space-around;
       }
       line-height: 2;
       &__left {
         text-align: center;
-        @media (min-width: $breakpoint-mobile) {
+        @media (min-width: $breakpointMobile) {
           text-align: left;
         }
         &__location {
