--- a/src/components/SearchInput/SearchInput.scss
+++ b/src/components/SearchInput/SearchInput.scss
@@ -36,7 +36,7 @@
           display: flex;
           justify-content: center;
         }
-  
+
         &__input {
           padding: 12px 24px;
           background-color: transparent;
@@ -50,7 +50,7 @@
           background-color: transparent;
           width: 80%;
           /*         background-image: url(http://mihaeltomic.com/codepen/input-search/ic_search_black_24px.svg); */
-  
+
           background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cpath d='M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z'/%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3C/svg%3E");
           background-repeat: no-repeat;
           background-size: 18px 18px;
@@ -60,12 +60,12 @@
           transition: all 250ms ease-in-out;
           backface-visibility: hidden;
           transform-style: preserve-3d;
-  
+
           &::placeholder {
             color: color(#575756 a(0.8));
             letter-spacing: 1.5px;
           }
-  
+
           &:hover,
           &:focus {
             padding: 12px 0;
@@ -85,7 +85,7 @@
   &__dropdown {
     width: 100%;
     position: absolute;
-      top: calc(75px + 15vh);
+    top: calc(75px + 15vh);
     z-index: 10;
     display: flex;
     justify-content: center;
@@ -106,7 +106,7 @@
       &::-webkit-scrollbar {
         display: none;
       }
-      div {
+      li {
         height: 35px;
         display: flex;
         align-items: center;
