--- a/src/components/SearchInput/SearchInput.scss
+++ b/src/components/SearchInput/SearchInput.scss
@@ -13,8 +13,16 @@
     &__title {
       font-family: Nunito;
       font-size: large;
+      font-weight: bold;
       text-align: center;
       width: 100%;
+    }
+    &__notification {
+      font-family: Nunito;
+      font-size: large;
+      text-align: center;
+      max-width: 100%;
+      padding: 20px;
     }
     &__block {
       padding: 15px;
@@ -85,7 +93,6 @@
   &__dropdown {
     width: 100%;
     position: absolute;
-    top: calc(75px + 15vh);
     z-index: 10;
     display: flex;
     justify-content: center;
